--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ TelephoneCST_Phase1_NoCST.csv
 TelephoneCST_Phase2_NoCST.csv
 
 .Rproj.user/
+.Rproj.user
 
 20190401CSTPhase1Groups_results_20191114.xlsx
 
